# geoparquet_share

./: .gitignore  Dockerfile_Dagster  README.md  docker-compose.yml
dagster_app/: README.md  pyproject.toml
dagster_app/src/dagster_app/: definitions.py
dagster_app/src/dagster_app/defs/: assets.py  constants.py  jobs.py  resources.py  schedules.py  tools.py
dagster_app/src/dagster_app/defs/geoparquet/: geoparquet_assets.py  pipelines.yaml
initdb/: 01-db-init.sql
