[project]
name = "dagster_app"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.1",
    "dagster-dg-cli==1.12.1",
    "dagster-webserver==1.12.1",
    "dagster-aws==0.28.1",
    "pandas==2.3.3",
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11"
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_app"
registry_modules = [
    "dagster_app.components.*",
]


